# swarm_trading

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
agents/base/: base_agent.py
agents/hedger/: hedger_agent.py
agents/news_reactive/: news_agent.py
agents/rl/: data.py  env.py  features.py  rl_agent.py  train.py
agents/scalper/: scalper_agent.py
agents/swing/: swing_agent.py
agents/templates/: swarm_factory.py
alembic/: env.py
alembic/versions/: 41cde2ea07b5_add_risk_state_table.py  4dad4f1eecd3_initial_tables.py
brokers/adapters/: broker_interface.py
brokers/ibkr/: ibkr_broker.py
brokers/mt5/: mt5_broker.py
core/: config.py  mcp_server.py  models.py
core/orchestrator/: orchestrator.py
dashboard/api/: routes.py
dashboard/frontend/: index.html
dashboard/websocket/: __init__.py  ws_handler.py
data/feeds/: market_feed.py  market_hours.py
data/historic/: db_models.py  repository.py
data/news/: news_feed.py
docs/architecture/adr/: 0000-template.md  0001-rl-inference-only-in-production.md  0002-async-io-blocking-calls-must-use-executor.md  0003-rl-model-hotswap-failure-isolation.md  0004-mypy-strict-baseline.md  0005-dependency-cleanup-and-dev-runtime-split.md  0006-per-symbol-error-isolation-in-orchestrator-loop.md  0007-rl-inference-input-validation.md  0008-postgresql-alembic-schema-authority.md  0009-docker-stack-gate-liveness-readiness.md  0010-daily-and-total-loss-halt.md  0011-vps-staging-deployment.md  README.md
docs/deploy/: staging-handoff-checklist.md  staging-vps-bootstrap.md
nginx/: Dockerfile  nginx.conf
risk/engine/: risk_engine.py
scripts/: ci-deploy-entrypoint.sh  ci-deploy-integration-lib.sh  deploy.sh  install_macos.sh  rollback.sh  run_mypy_precommit.sh  setup.sh  test_ci_deploy_entrypoint_rejects_invalid_input.sh  test_ci_deploy_entrypoint_shared_env.sh  test_deploy_and_rollback_scripts.sh  test_precommit_worktree_portability.sh
tests/integration/: test_postgres_repository.py
tests/unit/: test_base_agent.py  test_config.py  test_health_routes.py  test_hedger_agent.py  test_ibkr_broker.py  test_market_feed.py  test_market_hours.py  test_mcp_server.py  test_models.py  test_mt5_broker.py  test_news_feed.py  test_orchestrator_broadcast.py  test_repository.py  test_risk_engine.py  test_rl_agent.py  test_rl_env.py  test_rl_features.py  test_routes_agents.py  test_swing_agent.py  test_ws_manager.py
